# sail

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
crates/abc_server/: Cargo.toml
crates/abc_server/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  main.rs  program.rs  socket.rs  uninstall.rs  update.rs
crates/cli/src/command/: configure.rs  uninstall.rs  update.rs
crates/cli/src/program/: socket.rs
crates/core/: Cargo.toml
crates/core/src/: configuration.rs  lib.rs  socket.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: Cargo.toml  app.rs  application.rs  configuration.rs  main.rs  program.rs  server.rs  shutdown.rs  socket.rs  startup.rs
crates/daemon/src/app/: server.rs  socket.rs
crates/daemon/src/app/server/: interface.rs  proxy.rs  registry.rs
crates/daemon/src/application/: server.rs  shutdown.rs  socket.rs  uptime.rs
crates/daemon/src/application/server/: connection.rs
crates/daemon/src/application/shutdown/: exit.rs
crates/daemon/src/application/socket/: connection.rs  handler.rs  setup.rs
crates/daemon/src/handlers/: server.rs  socket.rs
crates/daemon/src/handlers/server/: body.rs  proxy.rs
crates/daemon/src/program/: shutdown.rs  socket.rs  state.rs
crates/daemon/src/program/socket/: connection.rs
crates/daemon/src/server/: handler.rs  listener.rs
crates/daemon/src/socket/: connection.rs  handler.rs  listener.rs  service.rs
crates/daemon/src/socket/connection/: handler.rs
crates/daemon/src/startup/: server.rs  socket.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/installer/: Cargo.toml
crates/installer/src/: main.rs
crates/instruct/: Cargo.toml
crates/instruct/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs  routes.rs
deployment/: sail.service  sail.socket
development/: install.sh  update.sh
docs/: development.md  setting-up-vps.md
scripts/: install.sh  remove.sh  uninstall.sh  update.sh
src/: main.rs
support/: install.sh
support/development/: install-local.sh  update.sh
support/systemd/: sail.service
testing/: actionsuccess  artifacts
