[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
axum = "0.7.5"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = "0.1.8"
owo-colors = "4.1.0"
pin-project = "1.1.5"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
