[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
hyper-util = "0.1.9"
nix = "0.29.0"
owo-colors = "4.1.0"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

axum = "0.7.7"
base64 = "0.22.1"
http-body-util = "0.1.2"
hyper = "1.5.0"
pin-project = "1.1.6"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.132"
toml = "0.8.19"
tower = "0.5.1"
tower-http = "0.6.1"
uuid = "1.11.0"
