[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-util = "0.1.10"
nix = "0.29.0"
owo-colors = "4.1.0"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = "1.41.0"
toml = "0.8.19"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
