[package]
name = "sail-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "saild"
path = "src/main.rs"

[dependencies]
sail-core.path = "../core"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
