[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "saild"
path = "src/main.rs"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
