[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "saild"
path = "src/main.rs"

[dependencies]
arc-swap = "1.7.1"
instruct = { path = "../instruct" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
