[package]
name = "sail_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
base64.workspace = true
sail_core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
